--- a/app/html/header.html
+++ b/app/html/header.html
@@ -1,16 +1,134 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-    <meta charset="UTF-8">
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="format-detection" content="telephone=no">
-    <title></title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-    <link href="../../css/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="../../css/fotorama.css" rel="stylesheet" type="text/css">
-    <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <link href="sass/style.min.css" rel="stylesheet" type="text/css">
-</head>
-<body>
-my header
+
+		<header style="top: 0px;" data-height-loaded="true" id="main-header" data-height-onload="70">
+			<div class="container clearfix et_menu_container">
+				<div class="logo_container">
+					<span class="logo_helper"></span>
+					<a href="/">
+						<img data-actual-height="86" data-actual-width="226" src="img/logo-ucontrol.gif" alt="uControl" id="logo" data-height-percentage="55">
+					</a>
+				</div>
+				<div style="padding-left: 131px;" id="et-top-navigation" data-height="55" data-fixed-height="55">
+					<nav id="top-menu-nav">
+						<ul id="top-menu" class="nav">
+							<li>
+								<a href="#">Управление отоплением</a>
+								<ul class="sub-menu">
+									<li>
+										<a href="#">Способы функционирования</a>
+									</li>
+									<li>
+										<a href="#">Введение</a>
+									</li>
+									<li>
+										<a href="#">Довооружение</a>
+									</li>
+									<li>
+										<a href="#">Регулятор комнатной температуры</a>
+									</li>
+									<li>
+										<a href="#">Приборы / Оборудование</a>
+									</li>
+									<li>
+										<a href="#">Умный-дом</a>
+									</li>
+									<li>
+										<a href="#">Энергетический менеджмент</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Области Применения Управление Обогревом</a>
+								<ul class="sub-menu">
+									<li>
+										<a href="#">Административно - офисное здание</a>
+									</li>
+									<li>
+										<a href="#">Отель</a>
+									</li>
+									<li>
+										<a href="#">Общежития и дома престарелых</a>
+									</li>
+									<li>
+										<a href="#">Коммуны</a>
+									</li>
+								</ul>
+							</li>
+							<li>
+								<a href="#">Экономия энергии</a>
+							</li>
+							<li>
+								<a href="#">О фирме</a>
+							</li>
+						</ul>
+					</nav>
+					<div id="et_top_search">
+						<span id="et_search_icon"></span>
+					</div>
+					<div id="et_mobile_nav_menu">
+						<div class="mobile_nav closed">
+							<span class="select_page">Выбор страницы</span>
+							<span class="mobile_menu_bar"></span>
+							<ul id="mobile_menu" class="et_mobile_menu">
+								<li class="et_first_mobile_item">
+									<a href="#">Управление отоплением</a>
+									<ul class="sub-menu">
+										<li>
+											<a href="#">Способы функционирования</a>
+										</li>
+										<li>
+											<a href="#">Введение</a>
+										</li>
+										<li>
+											<a href="#">Nachrüstung</a>
+										</li>
+										<li>
+											<a href="#">Raumtemperaturregler</a>
+										</li>
+										<li>
+											<a href="#">Geräte / Hardware</a>
+										</li>
+										<li>
+											<a href="#">Smart-Home</a>
+										</li>
+										<li>
+											<a href="#">Energiemanagement</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Einsatzgebiete Heizungssteuerung</a>
+									<ul class="sub-menu">
+										<li>
+											<a href="#">Verwaltungs- und Bürogebäude</a>
+										</li>
+										<li>
+											<a href="#">Hotel</a>
+										</li>
+										<li>
+											<a href="#">Wohnheime und Pflegeheime</a>
+										</li>
+										<li>
+											<a href="#">Kommunen</a>
+										</li>
+									</ul>
+								</li>
+								<li>
+									<a href="#">Energie sparen</a>
+								</li>
+								<li>
+									<a href="#">Unternehmen</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="et_search_outer">
+				<div class="container et_search_form_container">
+					<form role="search" method="get" class="et-search-form" action="#">
+						<input vk_17460="subscribed" class="et-search-field" placeholder="Suchen …" name="s" title="Suchen nach:" type="search">
+					</form>
+					<span class="et_close_search_field"></span>
+				</div>
+			</div>
+		</header>
