--- a/app/html/footer.html
+++ b/app/html/footer.html
@@ -1,11 +1,131 @@
-<!-- @@block  =  footer-->
-<footer>
-    my footer
+<footer id="main-footer">
+  <div class="container">
+    <div id="footer-widgets" class="clearfix">
+      <div class="footer-widget">
+        <div id="nav_menu-2" class="fwidget et_pb_widget widget_nav_menu">
+          <h4 class="title">УПРАВЛЕНИЕ ОТОПЛЕНИЕМ</h4>
+          <div class="menu-footer-1-heizungssteuerung-container">
+            <ul id="menu-footer-1-heizungssteuerung" class="menu">
+              <li>
+                <a href="#">Принцип работы</a>
+              </li>
+              <li>
+                <a href="#">Введение</a>
+              </li>
+              <li>
+                <a href="#">Доворужение</a>
+              </li>
+              <li>
+                <a href="#">Приборы/оборудование</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-widget">
+        <div id="nav_menu-3" class="fwidget et_pb_widget widget_nav_menu">
+          <h4 class="title">ПРИМЕНЕНИЕ</h4>
+          <div class="menu-footer-2-einsatzgebiete-container">
+            <ul id="menu-footer-2-einsatzgebiete" class="menu">
+              <li>
+                <a href="#">Отели</a>
+              </li>
+              <li>
+                <a href="#">Общежития</a>
+              </li>
+              <li>
+                <a href="#">Административно - офисное здание</a>
+              </li>
+              <li>
+                <a href="#">Общежития и домоапрестарелых</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="footer-widget">
+        <div id="recent-posts-3" class="fwidget et_pb_widget widget_recent_entries">
+          <h4 class="title">ENERGIE SPAREN</h4>
+          <ul>
+            <li>
+              <a href="#">Сэкономить на отоплении</a>
+            </li>
+            <li>
+              <a href="#">Правильно отопление</a>
+            </li>
+            <li>
+              <a href="#">Интеллектуальное отопление</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="footer-widget last">
+        <div id="text-2" class="fwidget et_pb_widget widget_text">
+          <div class="textwidget">
+            <strong>КОНТАКТЫ</strong>
+            <p>
+              <strong>uControl</strong>
+              <br> c/o 123 SmartEnergy GmbH
+              <br> Ostra-Allee 9
+              <br> 01067 Dresden-Altstadt
+            </p>
+            <p>
+              <strong>Postanschrift</strong>
+              <br> Messering 9
+              <br> 01067 Dresden -Friedrichstadt
+            </p>
+            <p>0351/323 044 15
+              <br>
+              <a href="mailto:info@ucontrol.de">info@ucontrol.de</a>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div id="et-footer-nav">
+    <div class="container">
+      <ul id="menu-satelitennavigaton" class="bottom-nav">
+        <li>
+          <a href="#">Контакты</a>
+        </li>
+        <li>
+          <a href="#">Данные</a>
+        </li>
+        <li>
+          <a href="#">Защита данных</a>
+        </li>
+        <li>
+          <a href="#">Демо</a>
+        </li>
+        <li>
+          <a href="#">Магазин</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+  <div id="footer-bottom">
+    <div class="container clearfix">
+      <p id="footer-info">Designed by
+        <a href="http://www.elegantthemes.com/" title="Premium WordPress Themes">Elegant Themes</a> | Powered by
+        <a href="http://www.wordpress.org/">WordPress</a>
+      </p>
+    </div>
+  </div>
 </footer>
-<!-- @@close-->
+</div>
+</div>
+<style type="text/css" id="et-builder-advanced-style"></style>
+<script type="text/javascript" src="js/frontend-builder-global-functions.js"></script>
+<script type="text/javascript" src="js/custom.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/waypoints.js"></script>
+<script type="text/javascript" src="js/jquery_002.js"></script>
+<script type="text/javascript">
+var et_pb_custom={"ajaxurl":"http:\/\/www.ucontrol.de\/ajax","images_uri":"http:\/\/www.ucontrol.de\/skin_main\/images","builder_images_uri":"http:\/\/www.ucontrol.de\/skin_main\/includes\/builder\/images","et_load_nonce":"d26180c4e9","subscription_failed":"Please, check the fields below to make sure you entered the correct information.","fill_message":"Please, fill in the following fields:","contact_error_message":"Please, fix the following errors:","invalid":"Invalid email","captcha":"Captcha","prev":"Prev","previous":"Vorherige","next":"N\u00e4chste","wrong_captcha":"You entered the wrong number in captcha.","is_builder_plugin_used":"","is_divi_theme_used":"1","widget_search_selector":".widget_search"};
+</script>
+<script type="text/javascript" src="js/frontend-builder-scripts.js"></script>
+<script type="text/javascript" src="js/wp-embed.js"></script>
+<script type="text/javascript">var icl_vars={"current_language":"de","icl_home":"http:\/\/www.ucontrol.de\/","ajax_url":"http:\/\/www.ucontrol.de\/ajax","url_type":"2"};</script>
+<script type="text/javascript" src="js/sitepress.js"></script>
 </body>
-<script src='https://code.jquery.com/jquery-2.2.2.min.js' type="text/javascript"></script>
-<script src="../../js/bootstrap.min.js" type="text/javascript"></script>
-<script src="../../js/fotorama.js" type="text/javascript"></script>
-<script src="js/script.min.js" type="text/javascript"></script>
-</html>
