--- a/index.html
+++ b/index.html
@@ -527,19 +527,57 @@
 </footer>
 </div>
 </div>
-<style type="text/css" id="et-builder-advanced-style"></style>
+
+<link rel="stylesheet" id="ninja-forms-display-css" href="css/ninja-forms-display.css" type="text/css" media="all">
+<link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
+<link rel="stylesheet" id="jquery-rating-css" href="css/jquery.css" type="text/css" media="all">
+<link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/operation.css" type="text/css" media="all">
 <script type="text/javascript" src="js/frontend-builder-global-functions.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
-<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/jquery_003.js"></script>
 <script type="text/javascript" src="js/waypoints.js"></script>
-<script type="text/javascript" src="js/jquery_002.js"></script>
+<script type="text/javascript" src="js/jquery_004.js"></script>
 <script type="text/javascript">
-var et_pb_custom={"ajaxurl":"http:\/\/www.ucontrol.de\/ajax","images_uri":"http:\/\/www.ucontrol.de\/skin_main\/images","builder_images_uri":"http:\/\/www.ucontrol.de\/skin_main\/includes\/builder\/images","et_load_nonce":"d26180c4e9","subscription_failed":"Please, check the fields below to make sure you entered the correct information.","fill_message":"Please, fill in the following fields:","contact_error_message":"Please, fix the following errors:","invalid":"Invalid email","captcha":"Captcha","prev":"Prev","previous":"Vorherige","next":"N\u00e4chste","wrong_captcha":"You entered the wrong number in captcha.","is_builder_plugin_used":"","is_divi_theme_used":"1","widget_search_selector":".widget_search"};
+var et_pb_custom = {
+"ajaxurl": "http:\/\/www.ucontrol.de\/ajax",
+"images_uri": "http:\/\/www.ucontrol.de\/skin_main\/images",
+"builder_images_uri": "http:\/\/www.ucontrol.de\/skin_main\/includes\/builder\/images",
+"et_load_nonce": "d26180c4e9",
+"subscription_failed": "Please, check the fields below to make sure you entered the correct information.",
+"fill_message": "Please, fill in the following fields:",
+"contact_error_message": "Please, fix the following errors:",
+"invalid": "Invalid email",
+"captcha": "Captcha",
+"prev": "Prev",
+"previous": "Vorherige",
+"next": "Nächste",
+"wrong_captcha": "You entered the wrong number in captcha.",
+"is_builder_plugin_used": "",
+"is_divi_theme_used": "1",
+"widget_search_selector": ".widget_search"
+};
 </script>
 <script type="text/javascript" src="js/frontend-builder-scripts.js"></script>
 <script type="text/javascript" src="js/wp-embed.js"></script>
-<script type="text/javascript">var icl_vars={"current_language":"de","icl_home":"http:\/\/www.ucontrol.de\/","ajax_url":"http:\/\/www.ucontrol.de\/ajax","url_type":"2"};</script>
+<script type="text/javascript">
+var icl_vars = {
+"current_language": "de",
+"icl_home": "http:\/\/www.ucontrol.de\/",
+"ajax_url": "http:\/\/www.ucontrol.de\/ajax",
+"url_type": "2"
+};
+</script>
 <script type="text/javascript" src="js/sitepress.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/underscore.js"></script>
+<script type="text/javascript" src="js/backbone.js"></script>
+<script type="text/javascript">
+
+</script>
+<script type="text/javascript" src="js/ninja-forms-display.js"></script>
 </body>
+
+</html>
 
 <!-- end footer.html-->
