--- a/app/html/global_styles.html
+++ b/app/html/global_styles.html
@@ -17,8 +17,10 @@
 <link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
 <link rel="stylesheet" id="jquery-rating-css" href="css/jquery.css" type="text/css" media="all">
 <link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
-<link rel="stylesheet" href="css/operation.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/theme-customizer-css.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/emoji-style.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/theme-customizer-css.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/et-custom-css.css" type="text/css" media="all">
 
 <script src="js/linkid.js" async="" type="text/javascript"></script>
 
