--- a/upgrade.html
+++ b/upgrade.html
@@ -43,8 +43,10 @@
 <link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
 <link rel="stylesheet" id="jquery-rating-css" href="css/jquery.css" type="text/css" media="all">
 <link rel="stylesheet" id="jquery-qtip-css" href="css/qtip.css" type="text/css" media="all">
-<link rel="stylesheet" href="css/operation.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/theme-customizer-css.css" type="text/css" media="all">
 <link rel="stylesheet" href="css/emoji-style.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/theme-customizer-css.css" type="text/css" media="all">
+<link rel="stylesheet" href="css/et-custom-css.css" type="text/css" media="all">
 
 <script src="js/linkid.js" async="" type="text/javascript"></script>
 
@@ -263,7 +265,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="http://www.ucontrol.de/heizungssteuerung/installation/">Подробная информация о внедрении</a>
+                            <a class="et_pb_promo_button et_pb_button" href="#">Подробная информация о внедрении</a>
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_5">
@@ -401,7 +403,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_3 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="http://www.ucontrol.de/einsatzgebiete-heizungssteuerung/">К областям применения</a>
+                            <a class="et_pb_promo_button et_pb_button" href="#">К областям применения</a>
                           </div>
                         </div>
                       </div>
@@ -496,7 +498,7 @@
                                       <div id="ninja_forms_field_5_error" style="display:none;" class="ninja-forms-field-error"></div>
                                     </div>
                                     <div class="field-wrap hidden-wrap label-above" id="ninja_forms_field_14_div_wrap" data-visible="1">
-                                      <input id="ninja_forms_field_14_type" value="hidden" type="hidden"> <input id="ninja_forms_field_14" name="ninja_forms_field_14" class="ninja-forms-field " value="http://www.ucontrol.de/heizungssteuerung/nachruesten" rel="14" type="hidden">
+                                      <input id="ninja_forms_field_14_type" value="hidden" type="hidden"> <input id="ninja_forms_field_14" name="ninja_forms_field_14" class="ninja-forms-field " value="#" rel="14" type="hidden">
                                       <div id="ninja_forms_field_14_error" style="display:none;" class="ninja-forms-field-error"></div>
                                     </div>
                                   </div>
