--- a/app/html/roomthermostat.html
+++ b/app/html/roomthermostat.html
@@ -127,7 +127,7 @@
                           </div>
                           <div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_1 et_pb_no_bg">
                             <div class="et_pb_promo_description"></div>
-                            <a class="et_pb_promo_button et_pb_button" href="http://www.ucontrol.de/heizungssteuerung/funktiosweise">К принципу работы</a>
+                            <a class="et_pb_promo_button et_pb_button" href="#">К принципу работы</a>
                           </div>
                         </div>
                       </div>
@@ -267,7 +267,7 @@
                                       <div id="ninja_forms_field_5_error" style="display:none;" class="ninja-forms-field-error"></div>
                                     </div>
                                     <div class="field-wrap hidden-wrap label-above" id="ninja_forms_field_14_div_wrap" data-visible="1">
-                                      <input id="ninja_forms_field_14_type" value="hidden" type="hidden"> <input id="ninja_forms_field_14" name="ninja_forms_field_14" class="ninja-forms-field " value="http://www.ucontrol.de/heizungssteuerung/raumtemperaturregler" rel="14" type="hidden">
+                                      <input id="ninja_forms_field_14_type" value="hidden" type="hidden"> <input id="ninja_forms_field_14" name="ninja_forms_field_14" class="ninja-forms-field " value="#" rel="14" type="hidden">
                                       <div id="ninja_forms_field_14_error" style="display:none;" class="ninja-forms-field-error"></div>
                                     </div>
                                   </div>
