--- a/app/html/footer.html
+++ b/app/html/footer.html
@@ -7,16 +7,16 @@
           <div class="menu-footer-1-heizungssteuerung-container">
             <ul id="menu-footer-1-heizungssteuerung" class="menu">
               <li>
-                <a href="#">Принцип работы</a>
+                <a href="operation.html">Принцип работы</a>
               </li>
               <li>
-                <a href="#">Введение</a>
+                <a href="installation.html">Введение</a>
               </li>
               <li>
-                <a href="#">Доворужение</a>
+                <a href="upgrade.html">Доворужение</a>
               </li>
               <li>
-                <a href="#">Приборы/оборудование</a>
+                <a href="devicehardware.html">Приборы/оборудование</a>
               </li>
             </ul>
           </div>
@@ -34,7 +34,7 @@
                 <a href="#">Общежития</a>
               </li>
               <li>
-                <a href="#">Административно - офисное здание</a>
+                <a href="energysaving.html">Административно - офисное здание</a>
               </li>
               <li>
                 <a href="#">Общежития и домоапрестарелых</a>
@@ -48,7 +48,7 @@
           <h4 class="title">ENERGIE SPAREN</h4>
           <ul>
             <li>
-              <a href="#">Сэкономить на отоплении</a>
+              <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
               <a href="#">Правильно отопление</a>
