--- a/heatingcontrol.html
+++ b/heatingcontrol.html
@@ -67,36 +67,36 @@ id="ie8" lang="de-DE"> <![endif]-->
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 							<li>
-								<a href="#">Управление отоплением</a>
+								<a href="heatingcontrol.html">Управление отоплением</a>
 								<ul class="sub-menu">
 									<li>
-										<a href="#">Способы функционирования</a>
+										<a href="operation.html">Способы функционирования</a>
 									</li>
 									<li>
-										<a href="#">Введение</a>
+										<a href="installation.html">Введение</a>
 									</li>
 									<li>
-										<a href="#">Довооружение</a>
+										<a href="upgrade.html">Довооружение</a>
 									</li>
 									<li>
-										<a href="#">Регулятор комнатной температуры</a>
+										<a href="roomthermostat.html">Регулятор комнатной температуры</a>
 									</li>
 									<li>
-										<a href="#">Приборы / Оборудование</a>
+										<a href="devicehardware.html">Приборы / Оборудование</a>
 									</li>
 									<li>
-										<a href="#">Умный-дом</a>
+										<a href="smarthome.html">Умный-дом</a>
 									</li>
 									<li>
-										<a href="#">Энергетический менеджмент</a>
+										<a href="energiemanagement.html">Энергетический менеджмент</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="#">Области Применения Управление Обогревом</a>
+								<a href="areas-of-application.html">Области Применения Управление Обогревом</a>
 								<ul class="sub-menu">
 									<li>
-										<a href="#">Административно - офисное здание</a>
+										<a href="energysaving.html">Административно - офисное здание</a>
 									</li>
 									<li>
 										<a href="#">Отель</a>
@@ -339,16 +339,16 @@ id="ie8" lang="de-DE"> <![endif]-->
           <div class="menu-footer-1-heizungssteuerung-container">
             <ul id="menu-footer-1-heizungssteuerung" class="menu">
               <li>
-                <a href="#">Принцип работы</a>
+                <a href="operation.html">Принцип работы</a>
               </li>
               <li>
-                <a href="#">Введение</a>
+                <a href="installation.html">Введение</a>
               </li>
               <li>
-                <a href="#">Доворужение</a>
+                <a href="upgrade.html">Доворужение</a>
               </li>
               <li>
-                <a href="#">Приборы/оборудование</a>
+                <a href="devicehardware.html">Приборы/оборудование</a>
               </li>
             </ul>
           </div>
@@ -366,7 +366,7 @@ id="ie8" lang="de-DE"> <![endif]-->
                 <a href="#">Общежития</a>
               </li>
               <li>
-                <a href="#">Административно - офисное здание</a>
+                <a href="energysaving.html">Административно - офисное здание</a>
               </li>
               <li>
                 <a href="#">Общежития и домоапрестарелых</a>
@@ -380,7 +380,7 @@ id="ie8" lang="de-DE"> <![endif]-->
           <h4 class="title">ENERGIE SPAREN</h4>
           <ul>
             <li>
-              <a href="#">Сэкономить на отоплении</a>
+              <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
               <a href="#">Правильно отопление</a>
