--- a/installation.html
+++ b/installation.html
@@ -84,36 +84,36 @@
 					<nav id="top-menu-nav">
 						<ul id="top-menu" class="nav">
 							<li>
-								<a href="#">Управление отоплением</a>
+								<a href="heatingcontrol.html">Управление отоплением</a>
 								<ul class="sub-menu">
 									<li>
-										<a href="#">Способы функционирования</a>
+										<a href="operation.html">Способы функционирования</a>
 									</li>
 									<li>
-										<a href="#">Введение</a>
+										<a href="installation.html">Введение</a>
 									</li>
 									<li>
-										<a href="#">Довооружение</a>
+										<a href="upgrade.html">Довооружение</a>
 									</li>
 									<li>
-										<a href="#">Регулятор комнатной температуры</a>
+										<a href="roomthermostat.html">Регулятор комнатной температуры</a>
 									</li>
 									<li>
-										<a href="#">Приборы / Оборудование</a>
+										<a href="devicehardware.html">Приборы / Оборудование</a>
 									</li>
 									<li>
-										<a href="#">Умный-дом</a>
+										<a href="smarthome.html">Умный-дом</a>
 									</li>
 									<li>
-										<a href="#">Энергетический менеджмент</a>
+										<a href="energiemanagement.html">Энергетический менеджмент</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="#">Области Применения Управление Обогревом</a>
+								<a href="areas-of-application.html">Области Применения Управление Обогревом</a>
 								<ul class="sub-menu">
 									<li>
-										<a href="#">Административно - офисное здание</a>
+										<a href="energysaving.html">Административно - офисное здание</a>
 									</li>
 									<li>
 										<a href="#">Отель</a>
@@ -215,7 +215,9 @@
                     <div class="et_pb_section  et_pb_section_0 et_pb_with_background et_section_regular">
                       <div class=" et_pb_row et_pb_row_0">
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_0">
-                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_left et_pb_image_0 et_always_center_on_mobile et-animated"> <img src="../Installation uControl Heizungssteuerung & Heizungsregler_files/intelligente-heiztechnik.jpg" alt=""></div>
+                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_left et_pb_image_0 et_always_center_on_mobile et-animated">
+                            <img src="img/intelligente-heiztechnik.jpg" alt="">
+                          </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1">
                           <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_0">
@@ -284,7 +286,9 @@
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_7">
-                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_right et_pb_image_1 et_always_center_on_mobile"> <img src="../Installation uControl Heizungssteuerung & Heizungsregler_files/heizungssteuerung-austauschen.gif" alt=""></div>
+                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_right et_pb_image_1 et_always_center_on_mobile">
+                            <img src="img/heizungssteuerung-austauschen.gif" alt="">
+                          </div>
                         </div>
                       </div>
                     </div>
@@ -505,16 +509,16 @@
           <div class="menu-footer-1-heizungssteuerung-container">
             <ul id="menu-footer-1-heizungssteuerung" class="menu">
               <li>
-                <a href="#">Принцип работы</a>
+                <a href="operation.html">Принцип работы</a>
               </li>
               <li>
-                <a href="#">Введение</a>
+                <a href="installation.html">Введение</a>
               </li>
               <li>
-                <a href="#">Доворужение</a>
+                <a href="upgrade.html">Доворужение</a>
               </li>
               <li>
-                <a href="#">Приборы/оборудование</a>
+                <a href="devicehardware.html">Приборы/оборудование</a>
               </li>
             </ul>
           </div>
@@ -532,7 +536,7 @@
                 <a href="#">Общежития</a>
               </li>
               <li>
-                <a href="#">Административно - офисное здание</a>
+                <a href="energysaving.html">Административно - офисное здание</a>
               </li>
               <li>
                 <a href="#">Общежития и домоапрестарелых</a>
@@ -546,7 +550,7 @@
           <h4 class="title">ENERGIE SPAREN</h4>
           <ul>
             <li>
-              <a href="#">Сэкономить на отоплении</a>
+              <a href="energysaving.html">Сэкономить на отоплении</a>
             </li>
             <li>
               <a href="#">Правильно отопление</a>
