--- a/app/html/installation.html
+++ b/app/html/installation.html
@@ -46,7 +46,9 @@
                     <div class="et_pb_section  et_pb_section_0 et_pb_with_background et_section_regular">
                       <div class=" et_pb_row et_pb_row_0">
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_0">
-                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_left et_pb_image_0 et_always_center_on_mobile et-animated"> <img src="../Installation uControl Heizungssteuerung & Heizungsregler_files/intelligente-heiztechnik.jpg" alt=""></div>
+                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_left et_pb_image_0 et_always_center_on_mobile et-animated">
+                            <img src="img/intelligente-heiztechnik.jpg" alt="">
+                          </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_1">
                           <div class="et_pb_text et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_text_0">
@@ -115,7 +117,9 @@
                           </div>
                         </div>
                         <div class="et_pb_column et_pb_column_1_2 et_pb_column_7">
-                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_right et_pb_image_1 et_always_center_on_mobile"> <img src="../Installation uControl Heizungssteuerung & Heizungsregler_files/heizungssteuerung-austauschen.gif" alt=""></div>
+                          <div class="et_pb_module et-waypoint et_pb_image et_pb_animation_right et_pb_image_1 et_always_center_on_mobile">
+                            <img src="img/heizungssteuerung-austauschen.gif" alt="">
+                          </div>
                         </div>
                       </div>
                     </div>
