--- a/devicehardware.html
+++ b/devicehardware.html
@@ -110,21 +110,21 @@
 										<a href="energysaving.html">Административно - офисное здание</a>
 									</li>
 									<li>
-										<a href="#">Отель</a>
+										<a href="hotel-smart-home.html">Отель</a>
 									</li>
 									<li>
-										<a href="#">Общежития и дома престарелых</a>
+										<a href="wohnheime-und-pflegeheime.html">Общежития и дома престарелых</a>
 									</li>
 									<li>
-										<a href="#">Коммуны</a>
+										<a href="kommunales-energiemanagement.html">Коммуны</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="#">Экономия энергии</a>
+								<a href="energie-sparen.html">Экономия энергии</a>
 							</li>
 							<li>
-								<a href="#">О фирме</a>
+								<a href="unternehmen.html">О фирме</a>
 							</li>
 						</ul>
 					</nav>
@@ -490,16 +490,16 @@
           <div class="menu-footer-2-einsatzgebiete-container">
             <ul id="menu-footer-2-einsatzgebiete" class="menu">
               <li>
-                <a href="#">Отели</a>
+                <a href="hotel-smart-home.html">Отели</a>
               </li>
               <li>
-                <a href="#">Общежития</a>
+                <a href="kommunales-energiemanagement.html">Общежития</a>
               </li>
               <li>
                 <a href="energysaving.html">Административно - офисное здание</a>
               </li>
               <li>
-                <a href="#">Общежития и домоапрестарелых</a>
+                <a href="wohnheime-und-pflegeheime.html">Общежития и домоапрестарелых</a>
               </li>
             </ul>
           </div>
@@ -622,6 +622,8 @@ var icl_vars = {
 
 </script>
 <script type="text/javascript" src="js/ninja-forms-display.js"></script>
+</script>
+<script type="text/javascript" src="js/salvattore.min.js"></script>
 </body>
 
 </html>
