--- a/footer.html
+++ b/footer.html
@@ -28,16 +28,16 @@
           <div class="menu-footer-2-einsatzgebiete-container">
             <ul id="menu-footer-2-einsatzgebiete" class="menu">
               <li>
-                <a href="#">Отели</a>
+                <a href="hotel-smart-home.html">Отели</a>
               </li>
               <li>
-                <a href="#">Общежития</a>
+                <a href="kommunales-energiemanagement.html">Общежития</a>
               </li>
               <li>
                 <a href="energysaving.html">Административно - офисное здание</a>
               </li>
               <li>
-                <a href="#">Общежития и домоапрестарелых</a>
+                <a href="wohnheime-und-pflegeheime.html">Общежития и домоапрестарелых</a>
               </li>
             </ul>
           </div>
@@ -160,6 +160,8 @@ var icl_vars = {
 
 </script>
 <script type="text/javascript" src="js/ninja-forms-display.js"></script>
+</script>
+<script type="text/javascript" src="js/salvattore.min.js"></script>
 </body>
 
 </html>
