--- a/header.html
+++ b/header.html
@@ -43,21 +43,21 @@
 										<a href="energysaving.html">Административно - офисное здание</a>
 									</li>
 									<li>
-										<a href="#">Отель</a>
+										<a href="hotel-smart-home.html">Отель</a>
 									</li>
 									<li>
-										<a href="#">Общежития и дома престарелых</a>
+										<a href="wohnheime-und-pflegeheime.html">Общежития и дома престарелых</a>
 									</li>
 									<li>
-										<a href="#">Коммуны</a>
+										<a href="kommunales-energiemanagement.html">Коммуны</a>
 									</li>
 								</ul>
 							</li>
 							<li>
-								<a href="#">Экономия энергии</a>
+								<a href="energie-sparen.html">Экономия энергии</a>
 							</li>
 							<li>
-								<a href="#">О фирме</a>
+								<a href="unternehmen.html">О фирме</a>
 							</li>
 						</ul>
 					</nav>
