--- a/app/html/index.html
+++ b/app/html/index.html
@@ -67,7 +67,7 @@
 									<div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_0 et_pb_blurb_position_top">
 										<div class="et_pb_blurb_content">
 											<div class="et_pb_main_blurb_image">
-												<a href="#">
+												<a href="operation.html">
 													<img src="img/funktionsweise-ucontrol.png" alt="Funktionsweise uControl" class="et-waypoint et_pb_animation_top et-animated">
 												</a>
 											</div>
@@ -83,13 +83,13 @@
 									<div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_1 et_pb_blurb_position_top">
 										<div class="et_pb_blurb_content">
 											<div class="et_pb_main_blurb_image">
-												<a href="#">
+												<a href="upgrade.html">
 													<img src="img/ucontrol-an-ihrer-heizung.png" alt="uControl an Ihrer Heizung nachrüsten" class="et-waypoint et_pb_animation_top et-animated">
 												</a>
 											</div>
 											<div class="et_pb_blurb_container">
 												<p>
-													<a href="#">Так легко дооборудовать uControl на систему отопление</a>
+													<a href="upgrade.html">Так легко дооборудовать uControl на систему отопление</a>
 												</p>
 											</div>
 										</div>
@@ -99,13 +99,13 @@
 									<div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_2 et_pb_blurb_position_top">
 										<div class="et_pb_blurb_content">
 											<div class="et_pb_main_blurb_image">
-												<a href="#">
+												<a href="hotel-smart-home.html">
 													<img src="img/heizungssteuerung-im-hotel1.png" alt="Heizungssteuerung im Hotel" class="et-waypoint et_pb_animation_top et-animated">
 												</a>
 											</div>
 											<div class="et_pb_blurb_container">
 												<p>
-													<a href="#">Воспользуйтесь управлению отоплением в отеле</a>
+													<a href="hotel-smart-home.html">Воспользуйтесь управлению отоплением в отеле</a>
 												</p>
 											</div>
 										</div>
@@ -115,13 +115,13 @@
 									<div class="et_pb_blurb et_pb_module et_pb_bg_layout_light et_pb_text_align_center IconLinkText et_pb_blurb_3 et_pb_blurb_position_top">
 										<div class="et_pb_blurb_content">
 											<div class="et_pb_main_blurb_image">
-												<a href="#">
+												<a href="energysaving.html">
 													<img src="img/heizungssteuerung-im-unternehmen.png" alt="uControl im Unternehmen" class="et-waypoint et_pb_animation_top et-animated">
 												</a>
 											</div>
 											<div class="et_pb_blurb_container">
 												<p>
-													<a href="#">Как правильно отапливать здания?</a>
+													<a href="energysaving.html">Как правильно отапливать здания?</a>
 												</p>
 											</div>
 										</div>
@@ -139,7 +139,7 @@
 									</div>
 									<div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_center  et_pb_cta_1 et_pb_no_bg">
 										<div class="et_pb_promo_description"></div>
-										<a class="et_pb_promo_button et_pb_button" href="#">Испытайте уже сегодня ваше индивидуальное предложение!</a>
+										<a class="et_pb_promo_button et_pb_button" href="formpage.html">Испытайте уже сегодня ваше индивидуальное предложение!</a>
 									</div>
 								</div>
 							</div>
@@ -218,7 +218,7 @@
 									</div>
 									<div class="et_pb_promo et_pb_module et_pb_bg_layout_light et_pb_text_align_left  et_pb_cta_2 et_pb_no_bg">
 										<div class="et_pb_promo_description"></div>
-										<a class="et_pb_promo_button et_pb_button" href="#">К демо-версии в режиме реального времени</a>
+										<a class="et_pb_promo_button et_pb_button" href="formpage-live-demo.html">К демо-версии в режиме реального времени</a>
 									</div>
 								</div>
 								<div class="et_pb_column et_pb_column_1_2 et_pb_column_empty et_pb_column_10"></div>
