--- a/energie-sparen.html
+++ b/energie-sparen.html
@@ -449,6 +449,7 @@ id="ie8" lang="de-DE"> <![endif]-->
 <script type="text/javascript" src="js/frontend-builder-global-functions.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/jquery_003.js"></script>
+<script type="text/javascript" src="js/jquery.fitvids.js"></script>
 <script type="text/javascript" src="js/waypoints.js"></script>
 <script type="text/javascript" src="js/jquery_004.js"></script>
 <script type="text/javascript">
