--- a/kommunales-energiemanagement.html
+++ b/kommunales-energiemanagement.html
@@ -714,6 +714,7 @@ id="ninja_forms_field_12_2" name="ninja_forms_field_12" type="radio" class="ninj
 <script type="text/javascript" src="js/frontend-builder-global-functions.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/jquery_003.js"></script>
+<script type="text/javascript" src="js/jquery.fitvids.js"></script>
 <script type="text/javascript" src="js/waypoints.js"></script>
 <script type="text/javascript" src="js/jquery_004.js"></script>
 <script type="text/javascript">
