--- a/operation.html
+++ b/operation.html
@@ -649,6 +649,7 @@ können&nbsp;– Tag für Tag, Jahr für Jahr!</h2>
 <script type="text/javascript" src="js/frontend-builder-global-functions.js"></script>
 <script type="text/javascript" src="js/custom.js"></script>
 <script type="text/javascript" src="js/jquery_003.js"></script>
+<script type="text/javascript" src="js/jquery.fitvids.js"></script>
 <script type="text/javascript" src="js/waypoints.js"></script>
 <script type="text/javascript" src="js/jquery_004.js"></script>
 <script type="text/javascript">
